# nt-data-pipelines

./: .gitignore  README.md  conftest.py  demo_slack_message.py  pyproject.toml  test_yfinance_backfill.py
pipelines/: __main__.py  benchmark_flow.py  benchmark_history_flow.py  betas_flow.py  calendar_flow.py  etf_prices_flow.py  factor_covariances_flow.py  factor_model_flow.py  history_flow.py  portfolio_weights_flow.py  returns_flow.py  reversal_flow.py  sp500_universe_flow.py  stock_prices_flow.py  stock_prices_yfinance_flow.py  trading_flow.py  universe_flow.py  variables.py
pipelines/clients/: __init__.py  alpaca.py  bear_lake.py  clickhouse.py  prefect.py  slack.py
pipelines/utils/: __init__.py  alpaca.py  calendar.py  covariance_matrix.py  data.py  portfolio.py  slack.py  slack_daily_summary.py  slack_failure_handler.py
tests/: test_slack_daily_summary.py
