[project]
name = "nt-data-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.2",
    "bear-lake>=0.1.5",
    "beautifulsoup4>=4.14.3",
    "cvxpy>=1.8.2",
    "lxml>=6.0.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-market-calendars>=5.3.1.2",
    "polars>=1.39.3",
    "prefect>=3.6.23",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "ray[default]>=2.54.0",
    "requests>=2.32.5",
    "statsmodels>=0.14.6",
    "slack-sdk>=3.41.0",
    "tqdm>=4.67.3",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
]
